examples/test/testpolicy17394.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17394
  namespace: namespace488
spec:
  podSelector:
    matchLabels:
      key16: value36
      key12: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value30
          key14: value17
      podSelector:
        matchLabels:
          key4: value24
          key27: value17
